@@ -6,8 +6,9 @@ Changes between 1.0.0b3 and 1.0.0
 
 * perform setup finalization before reporting failures
 
-* apply modified from Andreas Kloeckner to allow 
-  test functions to have no func_code 
+* apply modified patches from Andreas Kloeckner to allow 
+  test functions to have no func_code (#22) and to make 
+  "-k" and function keywords work  (#20)
 
 Changes between 1.0.0b1 and 1.0.0b3
 =============================================
